--- a/icode-ide/fr.cnes.icode.repository/pom.xml
+++ b/icode-ide/fr.cnes.icode.repository/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>icode-ide</artifactId>
-        <version>4.1.2-SNAPSHOT</version>
+        <version>5.0.0</version>
     </parent>
 
     <artifactId>fr.cnes.icode.repository</artifactId>
-    <version>4.1.2-SNAPSHOT</version>
+    <version>5.0.0</version>
     <packaging>eclipse-repository</packaging>
 
 
