--- a/icode-ide/fr.cnes.icode.tp/pom.xml
+++ b/icode-ide/fr.cnes.icode.tp/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>icode-ide</artifactId>
-        <version>4.1.2-SNAPSHOT</version>
+        <version>5.0.0</version>
     </parent>
 
     <artifactId>fr.cnes.icode.tp</artifactId>
