--- a/icode-ide/icode-library-feature/pom.xml
+++ b/icode-ide/icode-library-feature/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>icode-ide</artifactId>
-        <version>4.1.2-SNAPSHOT</version>
+        <version>5.0.0</version>
     </parent>
 
     <artifactId>icode.library.feature</artifactId>
