--- a/icode-ide/pom.xml
+++ b/icode-ide/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>icode-ide</artifactId>
-    <version>4.1.2-SNAPSHOT</version>
+    <version>5.0.0</version>
     <packaging>pom</packaging>
 
     <name>i-Code CNES IDE</name>
