--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,6 @@
     </distributionManagement>
 
     <properties>
-        <project.java.version>1.8</project.java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -110,7 +109,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <preparationGoals>org.eclipse.tycho:tycho-versions-plugin:${tycho-version}:update-eclipse-metadata org.apache.maven.plugins:maven-scm-plugin:${maven.scm.plugin.version}:add org.apache.maven.plugins:maven-scm-plugin:${maven.scm.plugin.version}:checkin</preparationGoals>
+                    <preparationGoals>org.eclipse.tycho:tycho-versions-plugin:${tycho-version}:update-eclipse-metadata clean verify org.apache.maven.plugins:maven-scm-plugin:${maven.scm.plugin.version}:add org.apache.maven.plugins:maven-scm-plugin:${maven.scm.plugin.version}:checkin</preparationGoals>
                     <completionGoals>org.eclipse.tycho:tycho-versions-plugin:${tycho-version}:update-eclipse-metadata org.apache.maven.plugins:maven-scm-plugin:${maven.scm.plugin.version}:add org.apache.maven.plugins:maven-scm-plugin:${maven.scm.plugin.version}:checkin</completionGoals>
                 </configuration>
             </plugin>
