--- a/fortran77-metrics/pom.xml
+++ b/fortran77-metrics/pom.xml
@@ -7,11 +7,10 @@
 	<parent>
 		<groupId>fr.cnes.icode</groupId>
 		<artifactId>parent</artifactId>
-		<version>dev</version>
+		<version>5.1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>fortran77-metrics</artifactId>
-	<version>${icode.version}</version>
 	<packaging>jar</packaging>
 
 	<name>Fortran 77 metrics</name>
