--- a/fortran90-language/pom.xml
+++ b/fortran90-language/pom.xml
@@ -7,11 +7,10 @@
     <parent>
 		<groupId>fr.cnes.icode</groupId>
 		<artifactId>parent</artifactId>
-		<version>dev</version>
+		<version>5.1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>fortran90-language</artifactId>
-    <version>${icode.version}</version>
 	<packaging>jar</packaging>
 
     <name>Fortran 90 language</name>
@@ -24,5 +23,5 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-	
+
 </project>
