--- a/icode-app/pom.xml
+++ b/icode-app/pom.xml
@@ -7,11 +7,10 @@
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>parent</artifactId>
-        <version>dev</version>
+        <version>5.1.0-SNAPSHOT</version>
     </parent>
 
 	<artifactId>icode-app</artifactId>
-	<version>${icode.version}</version>
     <packaging>jar</packaging>
 
     <name>i-Code CNES Application</name>
