--- a/icode-ide/icode-library-plugin/pom.xml
+++ b/icode-ide/icode-library-plugin/pom.xml
@@ -6,11 +6,10 @@
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>icode-ide</artifactId>
-        <version>5.0.0</version>
+        <version>5.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>icode.library.plugin</artifactId>
-
     <packaging>eclipse-plugin</packaging>
 
     <properties>
