--- a/icode-ide/pom.xml
+++ b/icode-ide/pom.xml
@@ -7,11 +7,10 @@
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>parent</artifactId>
-        <version>dev</version>
+        <version>5.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>icode-ide</artifactId>
-    <version>5.0.0</version>
     <packaging>pom</packaging>
 
     <name>i-Code CNES IDE</name>
