--- a/icode-library/pom.xml
+++ b/icode-library/pom.xml
@@ -7,11 +7,10 @@
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>parent</artifactId>
-        <version>dev</version>
+        <version>5.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>icode-library</artifactId>
-    <version>${icode.version}</version>
     <packaging>jar</packaging>
 
     <name>i-Code Library</name>
