--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.cnes.icode</groupId>
     <artifactId>parent</artifactId>
-    <version>dev</version>
+    <version>5.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -66,7 +66,7 @@
     </distributionManagement>
 
     <properties>
-        <icode.version>5.0.0</icode.version>
+        <icode.version>${project.version}</icode.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
