Optimize maven versions

--- a/fortran77-metrics/pom.xml
+++ b/fortran77-metrics/pom.xml
@@ -7,11 +7,10 @@
 	<parent>
 		<groupId>fr.cnes.icode</groupId>
 		<artifactId>parent</artifactId>
-		<version>dev</version>
+		<version>${revision}</version>
 	</parent>
 
 	<artifactId>fortran77-metrics</artifactId>
-	<version>${icode.version}</version>
 	<packaging>jar</packaging>
 
 	<name>Fortran 77 metrics</name>
@@ -20,7 +19,7 @@
         <dependency>
             <groupId>fr.cnes.icode</groupId>
             <artifactId>fortran77-language</artifactId>
-            <version>${icode.version}</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
