--- a/export-xml/pom.xml
+++ b/export-xml/pom.xml
@@ -7,11 +7,10 @@
 	<parent>
 		<groupId>fr.cnes.icode</groupId>
 		<artifactId>parent</artifactId>
-		<version>dev</version>
+		<version>${revision}</version>
 	</parent>
 
 	<artifactId>export-xml</artifactId>
-	<version>${icode.version}</version>
 	<packaging>jar</packaging>
 
 	<name>Export XML</name>
@@ -20,7 +19,7 @@
 		<dependency>
 			<groupId>fr.cnes.icode</groupId>
 			<artifactId>icode-core</artifactId>
-			<version>${icode.version}</version>
+			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
         <dependency>
