--- a/icode-ide/fr.cnes.icode.feature.ui/pom.xml
+++ b/icode-ide/fr.cnes.icode.feature.ui/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>icode-ide</artifactId>
-        <version>5.0.0</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>fr.cnes.icode.feature.ui</artifactId>
