--- a/icode-ide/icode-library-plugin/pom.xml
+++ b/icode-ide/icode-library-plugin/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>icode-ide</artifactId>
-        <version>5.1.0</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>icode.library.plugin</artifactId>
@@ -21,6 +21,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
                 <executions>
                     <execution>
                         <id>copy-icode-library</id>
@@ -46,6 +47,7 @@
             <plugin>
                 <groupId>com.coderplus.maven.plugins</groupId>
                 <artifactId>copy-rename-maven-plugin</artifactId>
+                <version>1.0.1</version>
                 <executions>
                     <execution>
                         <id>rename-file</id>
