Optimize maven versions

--- a/icode-ide/icode-library-plugin/pom.xml
+++ b/icode-ide/icode-library-plugin/pom.xml
@@ -21,6 +21,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
                 <executions>
                     <execution>
                         <id>copy-icode-library</id>
@@ -46,6 +47,7 @@
             <plugin>
                 <groupId>com.coderplus.maven.plugins</groupId>
                 <artifactId>copy-rename-maven-plugin</artifactId>
+                <version>1.0.1</version>
                 <executions>
                     <execution>
                         <id>rename-file</id>
