--- a/icode-app/pom.xml
+++ b/icode-app/pom.xml
@@ -7,11 +7,10 @@
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>parent</artifactId>
-        <version>dev</version>
+        <version>5.0.0</version>
     </parent>
 
 	<artifactId>icode-app</artifactId>
-	<version>${icode.version}</version>
     <packaging>jar</packaging>
 
     <name>i-Code CNES Application</name>
@@ -20,7 +19,7 @@
         <dependency>
             <groupId>fr.cnes.icode</groupId>
             <artifactId>icode-core</artifactId>
-            <version>${icode.version}</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -41,13 +40,13 @@
         <dependency>
             <groupId>fr.cnes.icode</groupId>
             <artifactId>fortran77-language</artifactId>
-            <version>${icode.version}</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>fr.cnes.icode</groupId>
             <artifactId>fortran90-language</artifactId>
-            <version>${icode.version}</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
