--- a/icode-ide/pom.xml
+++ b/icode-ide/pom.xml
@@ -7,21 +7,16 @@
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>parent</artifactId>
-        <version>dev</version>
+        <version>5.0.0</version>
     </parent>
 
     <artifactId>icode-ide</artifactId>
-    <version>5.0.0</version>
     <packaging>pom</packaging>
 
     <name>i-Code CNES IDE</name>
 
     <properties>
         <tycho-version>1.4.0</tycho-version>
-        <target-platform-version>4.7-SNAPSHOT</target-platform-version>
-        <project.java.version>1.8</project.java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
 
@@ -55,7 +50,7 @@
                         <artifact>
                             <groupId>fr.cnes.icode</groupId>
                             <artifactId>fr.cnes.icode.tp</artifactId>
-                            <version>${target-platform-version}</version>
+                            <version>${project.version}</version>
                         </artifact>
                     </target>
                     <environments>
