--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
     xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>fr.cnes.icode</groupId>
     <artifactId>parent</artifactId>
-    <version>dev</version>
+    <version>5.0.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -69,6 +70,7 @@
 
     <properties>
         <icode.version>5.0.0</icode.version>
+        <project.java.version>1.8</project.java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
