--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
     xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>fr.cnes.icode</groupId>
     <artifactId>parent</artifactId>
-    <version>5.1.0</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -66,7 +67,8 @@
     </distributionManagement>
 
     <properties>
-        <icode.version>5.1.0</icode.version>
+        <!-- versionning based on this https://maven.apache.org/guides/mini/guide-maven-ci-friendly.html  -->
+        <revision>5.2.0-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
