Adding release configurations

--- a/icode-ide/icode-library-plugin/pom.xml
+++ b/icode-ide/icode-library-plugin/pom.xml
@@ -14,7 +14,7 @@
     <packaging>eclipse-plugin</packaging>
 
     <properties>
-        <icode.library>${project.build.directory}/lib/icode-library-${icode.version}.jar</icode.library>
+        <icode.library>${project.build.directory}/lib/icode-library-${project.version}.jar</icode.library>
     </properties>
 
     <build>
