--- a/icode-app/pom.xml
+++ b/icode-app/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>fr.cnes.icode</groupId>
         <artifactId>parent</artifactId>
-        <version>5.0.0</version>
+        <version>5.1.0-SNAPSHOT</version>
     </parent>
 
 	<artifactId>icode-app</artifactId>
@@ -90,7 +88,7 @@
                             <target>
                                 <echo>Preparing i-Code CNES application distribution...</echo>
                                 <copy todir="${basedir}/target/icode/plugins" overwrite="true" flatten="true">
-                                    <fileset dir="${basedir}/.." includes="*.jar" >
+                                    <fileset dir="${basedir}/.." includes="*.jar">
                                         <include name="**/target/*.jar" />
                                         <exclude name="**/target/original-*.jar" />
                                         <exclude name="**/target/*-shaded.jar" />
