--- a/.github/workflows/java-continuous-integration.yml
+++ b/.github/workflows/java-continuous-integration.yml
@@ -18,15 +18,18 @@ jobs:
         java: [ '8', '11' ]
     name: Java ${{ matrix.Java }} CI
     steps:
+      # the latest version at https://github.com/marketplace/actions/checkout
       - name: Check out repository code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      # the latest version at https://github.com/marketplace/actions/setup-java-jdk
       - name: Setup java
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
           java-version: ${{ matrix.java }}
+      # the latest version at https://github.com/marketplace/actions/cache
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -41,3 +44,18 @@ jobs:
           restore-keys: ${{ runner.os }}-yarn-
       - name: Build with Maven
         run: mvn -B clean install
+      # the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
+      # Triggering SonarQube analysis as results of it are required by Quality Gate check.
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v4.2.1
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      # the latest version at https://github.com/marketplace/actions/sonarqube-quality-gate-check
+      # Check the Quality Gate status.
+      - name: SonarQube Quality Gate check
+        id: sonarqube-quality-gate-check
+        uses: sonarsource/sonarqube-quality-gate-action@v1.1.0
+        with:
+          pollingTimeoutSec: 600
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
