--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,9 @@
     </distributionManagement>
 
     <properties>
-        <!-- versionning based on this https://maven.apache.org/guides/mini/guide-maven-ci-friendly.html  -->
-        <revision>5.2.0-SNAPSHOT</revision>
+        <!-- versionning based on this
+        https://maven.apache.org/guides/mini/guide-maven-ci-friendly.html  -->
+        <revision>9.9.9-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -75,6 +76,7 @@
         <maven.surfire.version>2.22.2</maven.surfire.version>
         <junit.jupiter.version>5.6.0</junit.jupiter.version>
         <jacoco.version>0.8.4</jacoco.version>
+        <enforce.version>3.5.0</enforce.version>
     </properties>
 
     <dependencies>
@@ -133,7 +135,8 @@
                         </goals>
                         <configuration>
                             <fileSets>
-                                <fileSet implementation="org.apache.maven.shared.model.fileset.FileSet">
+                                <fileSet
+                                    implementation="org.apache.maven.shared.model.fileset.FileSet">
                                     <directory>${project.basedir}</directory>
                                     <includes>
                                         <include>**/*.exec</include>
@@ -160,5 +163,41 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>prod</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <version>${enforce.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>initialize</phase>
+                                <id>enforce-versions</id>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <requireReleaseDeps>
+                                            <message>No Snapshots Allowed for Dependencies!</message>
+                                        </requireReleaseDeps>
+                                        <requireReleaseVersion>
+                                            <message>Snapshot Version is Not Allowed for Release</message>
+                                        </requireReleaseVersion>
+                                    </rules>
+                                    <fail>true</fail>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 
 </project>
