--- a/.github/workflows/java-continuous-integration.yml
+++ b/.github/workflows/java-continuous-integration.yml
@@ -15,29 +15,52 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '8', '11' ]
+        java: [ '8', '11', '17', '21' ]
     name: Java ${{ matrix.Java }} CI
     steps:
+      # the latest version at https://github.com/marketplace/actions/checkout
       - name: Check out repository code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      # the latest version at https://github.com/marketplace/actions/setup-java-jdk
       - name: Setup java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           distribution: 'adopt'
           java-version: ${{ matrix.java }}
-      - name: Cache Maven packages
-        uses: actions/cache@v2
+          cache: 'maven'
+      # the latest version at https://github.com/actions/cache
+      - name: Cache target folders
+        uses: actions/cache@v4
         with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Cache node_modules
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: ${{ runner.os }}-yarn-
+          path: "**/target/"
+          key: ${{ runner.os }}-cache-java-${{ matrix.java }}-${{ github.sha }}
       - name: Build with Maven
         run: mvn -B clean install
+  quality:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      # the latest version at https://github.com/marketplace/actions/checkout
+      - name: Check out repository code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      # the latest version at https://github.com/actions/cache
+      - name: Restore cache
+        uses: actions/cache/restore@v4
+        with:
+          path: "**/target/"
+          fail-on-cache-miss: true
+          key: ${{ runner.os }}-cache-java-21-${{ github.sha }}
+      # the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
+      # Triggering SonarQube analysis as results of it are required by Quality Gate check.
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v4
+        with:
+          args: >
+            -Dsonar.qualitygate.wait=true
+            -Dsonar.qualitygate.timeout=600
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
